Copia de información del header
Se escrib el código para que aparezca información del header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 </head>
 <body>
     <header>
-        
+        <svg width="200px" height="200px">
+            <image width="200px" height="200px" xlink:href="hm-logo-png-13.svg"></image>
+        </svg>
+        <h1>CURRICULUM VITAE</h1>
+        <h2>Datos Personales</h2>
+        <h2>Nombre:</h2>
+        <h3>Henry Ernesto Milano</h3>
+        <h2>Lugar y Fecha de Nacimiento:</h2>
+        <h3>Caracas, 19 de febrero de 1977</h3>
     </header>
     <nav>
         
