Transcripción del código para navegar
Se escribe el menú de navegación

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <h3>Caracas, 19 de febrero de 1977</h3>
     </header>
     <nav>
-        
+        <ul>
+            <li><a href="#">Datos personales</a></li>
+            <li><a href="educacion.html">Educación</a></li>
+            <li><a href="experiencia.html">Experiencia</a></li>
+        </ul>
     </nav>
     <section>
     
