Información del section
Se transcribe información del section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         </ul>
     </nav>
     <section>
-    
+        <h2>Información Personal</h2>
+        <img src="img/henry.jpg" alt="Concierto" width="200px">
+        <h2>Perfil</h2>
+        <p>Profesor en la especialidad de informática con más de 10 años de dictando asignaturas tales como: Ofimática (Word, Excel,        PowerPoint y Access); Arquitectura de Microcomputadoras; programación básica en c++ y Desarrollo web básico. También poseo  experiencia en la instalación, administración, mantenimiento y reparación de equipos informáticos (hardware y software) asignados a laboratorios de instituciones educativas del Estado Vargas.<br> 
+        Trabajo bajo presión, vocación de servicio, fácil adaptación, armonía en las labores, buena presentación y comunicación.</p>
     </section>
     <footer>
         
