Creación del footer
Se transcribe la unformación del footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         Trabajo bajo presión, vocación de servicio, fácil adaptación, armonía en las labores, buena presentación y comunicación.</p>
     </section>
     <footer>
-        
+        <p>hm.focusrad@gmail.com</p>
+        <p>telf: +56 9 5339 2436</p>
     </footer>
 </body>
 </html>
