Creación de carpeta img
Se crea la carpeta img que contendrá las imágenes de web. También se corrije el código para que encuentre la ruta de laimagen logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <svg width="200px" height="200px">
-            <image width="200px" height="200px" xlink:href="hm-logo-png-13.svg"></image>
+            <image width="200px" height="200px" xlink:href="img/hm-logo-png-13.svg"></image>
         </svg>
         <h1>CURRICULUM VITAE</h1>
         <h2>Datos Personales</h2>
