--- a/experiencia.html
+++ b/experiencia.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <svg width="200px" height="200px">
-            <image width="200px" height="200px" xlink:href="img/hm-logo-png-13.svg"></image>
+            <image width="200px" height="200px" xlink:href="img/hm-logo-png-13.png"></image>
         </svg>
         <h1>CURRICULUM VITAE</h1>
         <h2>Datos Personales</h2>
@@ -18,7 +18,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Datos personales</a></li>
+            <li><a href="index.html">Datos personales</a></li>
             <li><a href="educacion.html">Educación</a></li>
             <li><a href="experiencia.html">Experiencia</a></li>
         </ul>
